# wc26-fantasy-friends

./: .env.example  .gitignore  README.md  claude.md  docker-compose.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 058f29c11f31_add_firebase_uid_to_users.py  4fa28a6e0d12_add_team_name_and_formation_to_squads.py  d602857e663e_initial_schema.py  d906d91fd1c4_add_squad_wildcard_ai_decision.py
apps/backend/app/: main.py
apps/backend/app/core/: config.py  db.py  logging_config.py  security.py
apps/backend/app/integrations/: api_football_client.py  football_data_client.py  llm_client.py  memory_client.py  planner.py
apps/backend/app/models/: __init__.py  ai_decision.py  league.py  match.py  player.py  player_match_stats.py  round.py  squad.py  squad_player.py  squad_round_points.py  team.py  user.py
apps/backend/app/rl/: environment.py  executor_policy.py  inference.py  train_ppo.py
apps/backend/app/routers/: __init__.py  ai_router.py  auth_router.py  leagues_router.py  matches_router.py  players_router.py  rounds_router.py  squads_router.py  transfers_router.py  users_router.py
apps/backend/app/schemas/: __init__.py  ai_schemas.py  auth_schemas.py  league_schemas.py  match_schemas.py  player_schemas.py  squad_schemas.py  user_schemas.py
apps/backend/app/services/: __init__.py  ai_coach_service.py  auth_service.py  fdr_service.py  feature_service.py  league_service.py  reflection_service.py  scoring_service.py  squad_service.py  stats_service.py  transfers_service.py  worldcup_sync_service.py
(+66 files in other folders)
